Improved ServerWrapper, added new features
+ Added ability to schedule restarts
* Changed the way credentials are saved,
+ Added ability to restrict certain remote client users
+ Added optional system tray icon, used when hiding the main window
* Fixed a few bugs